Agregado archivos del sitio web

--- a/about-us.html
+++ b/about-us.html
@@ -232,7 +232,7 @@
       <br><button class="btn btn-default btn-lg"><a href="products.html">Ver productos</a></button>
     </div>
     <div class="col-sm-4">
-       <img src="img/hamburguesa_front.png" style="">
+       <img src="img/hamburguesa_front.png" class="img-fluid">
     </div>
   </div>
 </div>
@@ -240,19 +240,16 @@
 <div class="container-fluid bg-grey">
   <div class="row">
     <div class="col-sm-4">
-      <img src="img/hamburguesa-tocino.png" style="">
+      <img src="img/hamburguesa-tocino.png" class="img-fluid" style="max-width:100%">
     </div>
     <div class="col-sm-8">
-      <h2>Our Values</h2><br>
-      <h4><strong>MISSION:</strong>  Satisfacer el gusto y prerferencia de nuestros clientes, ofreciendo alimentos rápidos de calidad, variedad y a cómodos precios, a trevés de una excelente y ágil servicio.</h4><br>
+      <h2>Nuestros valores</h2><br>
+      <h4><strong>MISION:</strong>  Satisfacer el gusto y prerferencia de nuestros clientes, ofreciendo alimentos rápidos de calidad, variedad y a cómodos precios, a trevés de una excelente y ágil servicio.</h4><br>
       <p><strong>VISION:</strong> Ser el mejor restaurante de comida rápidas del Ecuador a nivel nacional y prosicionarnos en el mercado nacional con la comida más rica de la zona, aumentando con ello la preferenia de nuestros clientes para alcanzar una mayor ventaja competitiva.</p>
     </div>
   </div>
 </div>
 
-
-<!-- Image of location/map -->
-<img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
 <footer class="container-fluid text-center">
   <a href="#myPage" title="To Top">
