--- a/products.html
+++ b/products.html
@@ -209,8 +209,8 @@
     </div>
     <div class="collapse navbar-collapse " id="myNavbar">
       <ul class="nav navbar-nav navbar-right  d-flex align-items-center"  style="height:100px !important;vertical-align:middle;">
-        <li><a href="index.html">INICIO</a></li>
-        <li><a href="scroll.html">SCROLL</a></li>
+        <li><a href="scroll.html">INICIO</a></li>
+        <li><a href="index.html">SCROLL</a></li>
         <li><a href="about-us.html">SOBRE NOSOTROS</a></li>
 
       </ul>
@@ -232,21 +232,21 @@
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="" style="max-height:300px;height=20%" >
-        <img src="img/hamburguesa-tocino.png" alt="Paris" width="400" height="300">
+        <img src="img/hamburguesa-tocino.png" alt="Paris" width="400" height="300" class="img-fluid" style="max-width:100%">
         <p><strong>Hamburguesa de Tocino</strong></p>
 
       </div>
     </div>
 <div class="col-sm-4">
       <div class="">
-        <img src="img/hamburguesa_front.png" class="img-fluid" width="400" height="300">
+        <img src="img/hamburguesa_front.png" class="img-fluid" width="400" height="300" class="img-fluid" style="max-width:100%">
         <p><strong>Hamburguesa doble carne en combo</strong></p>
 
       </div>
     </div>
 <div class="col-sm-4">
       <div class="">
-        <img src="img/hamburguesas2.jpg" class="img-fluid" width="400" height="300">
+        <img src="img/hamburguesas2.jpg" class="img-fluid" width="400" height="300" class="img-fluid" style="max-width:100%">
         <p><strong>Hamburguesa de Tocino</strong></p>
 
       </div>
