--- a/about-us.html
+++ b/about-us.html
@@ -5,11 +5,16 @@
   <title>Hamburguesas Mundialistas Grupo 3</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+   
+  <link href="bootstrap/Montserrat.css" rel="stylesheet" type="text/css">
+  <link href="bootstrap/Lato.css" rel="stylesheet" type="text/css">
+      <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" />
+    <link rel="stylesheet" href="bootstrap/bootstrap4_1_0.min.css">
+    <script src="bootstrap/scrollreveal.min.js"></script>
+    <link rel="stylesheet" href="css/main3.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  
   <style>
   .clase1{
     height:100px;
@@ -124,7 +129,7 @@
   }
   .navbar {
     margin-bottom: 0;
-    background-color: #f4511e;
+    background-color: #fff;
     z-index: 9999;
     border: 0;
     font-size: 12px !important;
@@ -134,7 +139,7 @@
     font-family: Montserrat, sans-serif;
   }
   .navbar li a, .navbar .navbar-brand {
-    color: #fff !important;
+    color: #111;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
     color: #f4511e !important;
@@ -196,27 +201,27 @@
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
-<div class="d-flex align-items-center d-inline-flex p-2 bd-highlight">
-<nav class="navbar navbar-default navbar-fixed-top " >
-  <div class="container clase1 ">
-    <div class="navbar-header ">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#myPage"><img src="img/hamburguesas.png" class="logo"></a>
-    </div>
-    <div class="collapse navbar-collapse " id="myNavbar">
-      <ul class="nav navbar-nav navbar-right  d-flex align-items-center"  style="height:100px !important;vertical-align:middle;">
-        <li><a href="scroll.html">INICIO</a></li>
-        <li><a href="index.html">LANDING</a></li>
-        <li><a href="products.html">PRODUCTOS</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-</div>
+
+
+
+
+	<nav class="navbar navbar-expand-lg navbar-light fixed-top">
+		  <a class="navbar-brand" href="#">Hamburguesas Mundialistas</a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			<div class="navbar-nav ml-auto">
+			  <a class="nav-item nav-link" href="scroll.html">INICIO</a>
+			  <a class="nav-item nav-link" href="index.html">LANDING</a>
+			  <a class="nav-item nav-link" href="about-us.html">SOBRE NOSOTROS</a>
+			  <a class="nav-item nav-link" href="products.html">PRODUCTOS</a>
+			</div>
+		  </div>
+		</nav>
+
+
+
 <div class="jumbotron text-center">
   <h1>HAMBURGUESAS MUNDIALISTAS</h1> 
   <p>Hamburguesas mundialistas te ofrece las mejores amburguesas del sector, una buena opción para compartir en familia. Recuerda la gente que ama comer siempre es la mejor gente.</p> 
@@ -228,11 +233,11 @@
   <div class="row">
     <div class="col-sm-8">
       <h2>Sobre Nosotros</h2><br>
-      <h4>Disfruta de tu mundial, con hamburguesas mundialistas con los mejores ingredientes, proteinas y grases que tu cuerpo necesita. Festeja a tu equipo favorito con nosotros.Hamburguesas mundialistas te ofrece las mejores amburguesas del sector, una buena opción para compartir en familia. Recuerda la gente que ama comer siempre es la mejor gente.</p>
+      <h4>Disfruta de tu mundial, con hamburguesas mundialistas con los mejores ingredientes, proteinas y grasss que tu cuerpo necesita. Festeja a tu equipo favorito con nosotros. Hamburguesas mundialistas te ofrece las mejores amburguesas del sector, una buena opción para compartir en familia. Recuerda la gente que ama comer siempre es la mejor gente.</p>
       <br><button class="btn btn-default btn-lg"><a href="products.html">Ver productos</a></button>
     </div>
     <div class="col-sm-4">
-       <img src="img/hamburguesa_front.png" class="img-fluid">
+       <img src="img/hamburguesa_front.png" width="400" height="400" class="img-fluid" style="max-width:100%">
     </div>
   </div>
 </div>
@@ -240,12 +245,12 @@
 <div class="container-fluid bg-grey">
   <div class="row">
     <div class="col-sm-4">
-      <img src="img/hamburguesa-tocino.png" class="img-fluid" style="max-width:100%">
+      <img src="img/hamburguesa-tocino.png" width="400" height="400" class="img-fluid" style="max-width:100%">
     </div>
     <div class="col-sm-8">
       <h2>Nuestros valores</h2><br>
       <h4><strong>MISION:</strong>  Satisfacer el gusto y prerferencia de nuestros clientes, ofreciendo alimentos rápidos de calidad, variedad y a cómodos precios, a trevés de una excelente y ágil servicio.</h4><br>
-      <p><strong>VISION:</strong> Ser el mejor restaurante de comida rápidas del Ecuador a nivel nacional y prosicionarnos en el mercado nacional con la comida más rica de la zona, aumentando con ello la preferenia de nuestros clientes para alcanzar una mayor ventaja competitiva.</p>
+      <h4><strong>VISION:</strong> Ser el mejor restaurante de comida rápidas del Ecuador a nivel nacional y prosicionarnos en el mercado nacional con la comida más rica de la zona, aumentando con ello la preferenia de nuestros clientes para alcanzar una mayor ventaja competitiva.</h4>
     </div>
   </div>
 </div>
@@ -253,8 +258,10 @@
 
 <footer class="container-fluid text-center">
   <a href="#myPage" title="To Top">
-    <span class="glyphicon glyphicon-chevron-up"></span>
+  <button class="btn btn-primary">Volver Arriba</button>
   </a>
+  <br>
+  <br>
   <p>Hamburguesas Mundialistas Grupo 3 NRC: 8443
 </footer>
 
@@ -295,5 +302,53 @@ $(document).ready(function(){
 })
 </script>
 
+    <!-- SCRIPTS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <!-- SCROOLL REVEAL SCRIPT -->
+    <script>
+      window.sr = ScrollReveal();
+
+    sr.reveal('.navbar', {
+      duration: 2000,
+      origin: 'bottom'
+    });
+
+    sr.reveal('.header-content-left', {
+      duration: 2000,
+      origin: 'top',
+      distance: '300px'
+    });
+
+    sr.reveal('.header-content-right', {
+      duration: 2000,
+      origin: 'right',
+      distance: '300px'
+    });
+
+    sr.reveal('.header-btn', {
+      duration: 2000,
+      delay: 1000, 
+      origin: 'bottom'
+    });
+
+    sr.reveal('#testimonial div', {
+      duration: 2000,
+      origin: 'left',
+      distance: '300px',
+      viewFactor: 0.2
+    });
+
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+          behavior: 'smooth'
+        });
+      });
+    });
+    </script>
 </body>
 </html>
