--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hamburguesas Mundialistas Grupo 3</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bootstrap4 Landing01</title>
-    <!-- BOOTSTRAP CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="bootstrap/bootstrap4_3_1.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="styles.css">
+	
+	
 </head>
 
 <body>
